# gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md  result  test.c
src/: cartridge.c  cartridge.h  clock.c  clock.h  debug.txt  dialogs.c  dialogs.h  dma.c  dma.h  fifo.c  gameboy  gb.c  interrupts.c  interrupts.h  joypad.c  joypad.h  main.c  memory.c  memory.h  ppu.c  ppu.h  regions.h  serial.c  serial.h
src/APU/: apu.c  apu.h  samples.c  samples.h
src/CPU/: cpu.c  cpu.h  registers.c  registers.h
src/PPU/: ppu.c  ppu.h  window.c  window.h
src/ROMS/Saves/: la2.sav
